@@ -13,6 +13,8 @@
  * Released under GNU GPL, read the file 'COPYING' for more information
  */
 
+#include <config.h>
+
 #include <string.h>
 #include <glib.h>
 #include <libgnome/gnome-defs.h>
